--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.2.2",
     "vite": "^4.3.2"
   }
 }
